# title-fingerprint-db

./: .gitignore  CMakeLists.txt  COPYING  db.c  db.h  hashtable.c  hashtable.h  ht.c  ht.h  main.c  text.c  text.h
other/docker/: .gitignore  Dockerfile  docker-compose.yml
other/docker/title-fingerprint-db/: Dockerfile
static/: panel.html
